@@ -1,8 +1,11 @@
 Version 3.0.1 June 1, 2006
 ==========================
+BUG: Ticket#28 - OnClick does not work with Safari/KHTML (Wei)
 BUG: Ticket#37 - Changes of config files do not trigger cache update (Qiang)
 BUG: Ticket#44 - THtmlArea (tiny_mce) not working on some systems (Qiang)
+BUG: Ticket#162 - Missing currency sign in TNumberFormat if Value is 0 (Wei)
 BUG: Ticket#167 - TSecurityManager issues warning when trying to encrypt/decrypt strings (Qiang)
+BUG: Ticket#169 - Validation of subclass of THtmlArea/TDatePicker fails (Wei)
 BUG: Ticket#179 - CGI incompatibility causing clientscripts.php failure (Qiang)
 BUG: Ticket#181 - Unable to change Content-Type in response header if charset is not set (Qiang)
 ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
@@ -12,6 +15,8 @@ ENH: added search for quickstart tutorials (Wei)
 ENH: added support to property tags for template owner control (Qiang)
 ENH: added Bulgarian requirement checker messages (StanProg)
 ENH: added TTheme.BaseUrl and TTheme.BasePath property (Qiang)
+ENH: added TListControl.SelectedValues property (Qiang)
+ENH: added TThemeManager.AvailableThemes property (Qiang)
 ENH: refactored TUserManager and TAuthManager so that they are easier to be extended (Qiang)
 CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
